tests/ui/parser/issues/issue-91461.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `:`
  --> $DIR/issue-91461.rs:2:8
   |
LL |     a(_:b:,)
   |        ^ expected one of `)`, `,`, `.`, `?`, or an operator

error: aborting due to previous error

