tests/ui/parser/issues/issue-91461.rs
fn main() {
    a(_:b:,)
    //~^ ERROR expected identifier, found reserved identifier
    //~| ERROR: expected one of
}
